Implemented Notes for website Structure and created the Navbar basic function

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,44 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+<!--Nav bar here-->
+<nav class="navbar navbar-expand-lg fixed-top navbarScroll"></nav>
+    <div class="container">
+        <a class="navbar-brand" href="#"LOGOBRAND</a>
+    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="navbarSupportedContend"
+            aria-label=" toggle navigation" arial-expander="false"
+            aria-controls="navbarSupportedContend"><p>ICON.HERE</p></button>
+</nav>
+<!--End of Navbar-->
+<!---->
+<!---->
+<!--Main Banner-->
 
+<!--End of Main Banner-->
+<!---->
+<!---->
+<!--Section 1-->
+<!--About-->
+
+<!--End of About-->
+<!--Section 2-->
+<!--Services-->
+
+<!--end of Services-->
+<!--Section 3-->
+<!--Portfolio-->
+
+<!--End of Portfolio-->
+<!--Section 4-->
+<!--Contact-->
+
+<!--End of Contact-->
+<!---->
+<!---->
+<!--Footer-->
+
+<!--End of Footer-->
 </body>
 </html>
